# floorplan-set-transformer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: download_data.py  evaluate.py  train.py
src/data/: __init__.py  dataset.py  download.py  features.py  preprocess.py  sampler.py
src/models/: __init__.py  modules.py  panoptic_head.py  set_transformer.py
src/training/: __init__.py  loss.py  metrics.py  train.py
src/utils/: __init__.py  visualization.py
tests/: test_model.py
